src/snapshots/tptp__tfx__tests__tfx_mapping_type-3.snap
---
source: src/tfx.rs
expression: parsed
---
MappingType {
    domain: Product(
        XprodType(
            [
                Atomic(
                    Variable(
                        Variable(
                            UpperWord(
                                "A",
                            ),
                        ),
                    ),
                ),
                Atomic(
                    Constant(
                        TypeConstant(
                            TypeFunctor(
                                Lower(
                                    LowerWord(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
    range: Variable(
        Variable(
            UpperWord(
                "B",
            ),
        ),
    ),
}
