src/snapshots/tptp__tfx__tests__tfx_mapping_type.snap
---
source: src/tfx.rs
expression: parsed
---
MappingType {
    domain: Atomic(
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    ),
    range: Variable(
        Variable(
            UpperWord(
                "B",
            ),
        ),
    ),
}
