src/snapshots/tptp__tfx__tests__tfx_monotype-3.snap
---
source: src/tfx.rs
expression: parsed
---
Mapping(
    MappingType {
        domain: Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
        range: Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    },
)
