src/snapshots/tptp__tfx__tests__tfx_non_atomic_type-3.snap
---
source: src/tfx.rs
expression: parsed
---
Quantified(
    QuantifiedType {
        bound: VariableList(
            [
                Untyped(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ],
        ),
        typ: Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
    },
)
