src/snapshots/tptp__tfx__tests__tfx_non_atomic_type-5.snap
---
source: src/tfx.rs
expression: parsed
---
Parenthesised(
    Mapping(
        MappingType {
            domain: Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ),
            range: Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        },
    ),
)
