src/snapshots/tptp__tfx__tests__tfx_plain_atomic-3.snap
---
source: src/tfx.rs
expression: parsed
---
Function(
    Functor(
        Lower(
            LowerWord(
                "f",
            ),
        ),
    ),
    Arguments(
        [
            Logic(
                Unitary(
                    Atomic(
                        Defined(
                            DefinedAtomic(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
