src/snapshots/tptp__tfx__tests__tfx_plain_atomic.snap
---
source: src/tfx.rs
expression: parsed
---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "c",
                ),
            ),
        ),
    ),
)
