src/snapshots/tptp__tfx__tests__tfx_prefix_unary.snap
---
source: src/tfx.rs
expression: parsed
---
PrefixUnary {
    op: UnaryConnective,
    formula: Unitary(
        Atomic(
            Defined(
                DefinedAtomic(
                    Constant(
                        DefinedConstant(
                            DefinedFunctor(
                                AtomicDefinedWord(
                                    DollarWord(
                                        LowerWord(
                                            "true",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
