src/snapshots/tptp__tfx__tests__tfx_quantified_formula.snap
---
source: src/tfx.rs
expression: parsed
---
QuantifiedFormula {
    quantifier: Forall,
    bound: VariableList(
        [
            Typed(
                TypedVariable {
                    variable: Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                    typ: Variable(
                        Variable(
                            UpperWord(
                                "A",
                            ),
                        ),
                    ),
                },
            ),
        ],
    ),
    formula: Unitary(
        Atomic(
            Defined(
                DefinedAtomic(
                    Constant(
                        DefinedConstant(
                            DefinedFunctor(
                                AtomicDefinedWord(
                                    DollarWord(
                                        LowerWord(
                                            "true",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
